# HASH-OS

./: Makefile  README.md  build.sh  linker.ld  placeholders.c
.github/workflows/: cmake-multi-platform.yml
HASH-OS-main/: Makefile  README.md  linker.ld
HASH-OS-main/bootloader/: CMakeLists.txt  bootldr.h  bootloader.asm  display.h  display_driver.c  display_driver.h  fonts.c
HASH-OS-main/config/: audio.hcfg  config.cfg  system.hcfg
HASH-OS-main/drivers/: audio_enhancer.c  audio_enhancer.h  audio_manager.c  audio_manager.h  audio_profiles.c  audio_profiles.h  display.h  display4k.c  display4k.h  fonts.h  touch_input.c  virtual_keyboard.c  virtual_keyboard.h
HASH-OS-main/filesystem/: filesystem.c
HASH-OS-main/iso/boot/grub/: grub.cfg
HASH-OS-main/kernel/: UI to Kernel Main Loop  app_manager.c  app_manager.h  config_parser.h  entry.asm  fat.c  fat.h  fs.c  fs.h  idt_loader.asm  interrupt.c  kernel.c  task.h
HASH-OS-main/ui/: animations.c  animations.h  file_explorer.c  file_explorer.h  launcher.c  launcher.h  settings.c  settings.h  splash.c  splash.h  status_bar.c  status_bar.h  touch_feedback.c  touch_feedback.h  ui_manager.c  ui_manager.h  wallpapers.c  wallpapers.h
bootloader/: bootldr.c  bootloader.asm  fonts.h
config/: config.h
drivers/: audio_manager.c  display4k.c  driver.c  driver.h  fonts.h  touch_input.h
kernel/: app_manager.c  app_manager.h  config_parser.c  entry.asm  fat.c  fs.c  fs.h  interrupt.h  kernel.c  task.c
ui/: splash.c  splash.h  status_bar.c  status_bar.h  touch_feedback.h  ui_manager.h
